# ubs-data-agent

./: .gitignore  Dockerfile  README.md  compose-dev.yaml  compose.yaml  pyproject.toml
scripts/: build_and_save.sh
ubs_data_agent/: config.py  logger.py  main.py  mapping.py
ubs_data_agent/config/: config.yaml
